--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
-    <string name="app_name">众易付虚拟卡</string>
+
+    <string name="app_name">工行手机银行</string>
     <string name="str_login">登    录</string>
     <string name="str_user_hint">请输入账号</string>
     <string name="str_pwd_hint">请输入密码</string>
@@ -31,4 +32,5 @@
     <string name="pwd_in">请输入密码</string>
     <string name="accounts">帐号</string>
     <string name="accountsin">请输入帐号</string>
+
 </resources>
